feat: add Nunjucks template engine for multiple pages

--- a/src/views/pages/404/index.html
+++ b/src/views/pages/404/index.html
@@ -7,7 +7,7 @@
   <!-- load source favicon via Webpack alias '@images' -->
   <link href="@images/favicon.png" rel="icon" type='image/png'>
   <!-- inline source style from local directory -->
-  <link href="./style.scss?inline" rel="stylesheet">
+  <link href="style.scss?inline" rel="stylesheet">
 </head>
 <body>
   <h1>404</h1>
