--- a/src/views/pages/demo/index.html
+++ b/src/views/pages/demo/index.html
@@ -18,7 +18,7 @@
   <div class="container flex-column center-x">
     <h1>Demo</h1>
     <div class="teaser">
-      This is demonstration how to load icons, file and inline images in HTML.
+      This is demonstration how to load icons and inline SVG/PNG images in HTML.
     </div>
   </div>
 </section>
